Added some test to async client